--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~51.0.8",
+    "expo-file-system": "^17.0.1",
+    "expo-image-picker": "^15.0.5",
     "expo-status-bar": "~1.12.1",
     "firebase": "^9.14.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-image-picker": "^7.1.2",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1"
   },
