--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^9.14.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-deck-swiper": "^2.0.17",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1"
   },
