--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "~51.0.8",
+    "expo": "~51.0.17",
     "expo-image-picker": "^15.0.6",
     "expo-status-bar": "~1.12.1",
     "firebase": "^9.14.0",
     "react": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.2",
     "react-native-deck-swiper": "^2.0.17",
     "react-native-masonry-list": "^2.16.1",
+    "react-native-pager-view": "6.3.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
