--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "react-native-deck-swiper": "^2.0.17",
     "react-native-masonry-list": "^2.16.1",
     "react-native-pager-view": "6.3.0",
+    "react-native-paper": "^5.12.3",
+    "react-native-progress": "^5.0.1",
+    "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
