--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.74.1",
     "react-native-deck-swiper": "^2.0.17",
     "react-native-masonry-list": "^2.16.1",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.1.0"
