--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-searchable-dropdown-kj": "^1.9.3",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0"
   },
