--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/drawer": "^6.7.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~51.0.8",
@@ -20,7 +21,9 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-deck-swiper": "^2.0.17",
+    "react-native-gesture-handler": "^2.17.1",
     "react-native-masonry-list": "^2.16.1",
+    "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.1.0"
