--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.7.0",
+    "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~51.0.8",
@@ -23,9 +24,11 @@
     "react-native-deck-swiper": "^2.0.17",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-masonry-list": "^2.16.1",
+    "react-native-pager-view": "6.3.0",
     "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
