--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.7.0",
     "@react-navigation/material-top-tabs": "^6.6.13",
@@ -25,9 +26,9 @@
     "react-native-gesture-handler": "^2.17.1",
     "react-native-masonry-list": "^2.16.1",
     "react-native-pager-view": "6.3.0",
-    "react-native-reanimated": "^3.14.0",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "3.31.1",
+    "react-native-reanimated": "3.10.1",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.32.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0"
   },
