--- a/package.json
+++ b/package.json
@@ -27,9 +27,13 @@
     "react-native-gesture-handler": "^2.17.1",
     "react-native-masonry-list": "^2.16.1",
     "react-native-pager-view": "6.3.0",
+    "react-native-paper": "^5.12.3",
+    "react-native-progress": "^5.0.1",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "3.10.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
+    "react-native-searchable-dropdown-kj": "^1.9.3",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0"
   },
