--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@firebase/app": "^0.10.7",
+    "@firebase/auth": "^1.7.5",
+    "@firebase/firestore": "^4.6.4",
+    "@firebase/storage": "^0.12.6",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^20.3.0",
+    "@react-native-firebase/auth": "^20.3.0",
+    "@react-native-firebase/firestore": "^20.3.0",
+    "@react-native-firebase/storage": "^20.3.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.7.0",
     "@react-navigation/material-top-tabs": "^6.6.13",
